refactor: extractValueFromAnswer to reduce complexity